syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.jiache.grpc.offload";
option java_outer_classname = "ServerProto";

package io.jiache.grpc.offload;

service ServerService {
    rpc CallBack (CallBackRequest) returns (CallBackResponse) {}
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message CallBackRequest{
    int32 term = 1;
    int32 serverIndex = 2;
    int32 latestCommitIndex = 3;
}

message CallBackResponse{
    bool success = 1;
    int32 term = 2;
    int32 replicatedIndex = 3;
}

message AppendEntriesRequest{
    int32 term = 1;
    int32 preLogIndex = 2;
    string entry = 3;
}

message AppendEntriesResponse{
    int32 term = 1;
    bool success = 2;
}

service AgentService {
    rpc GetNewSecretary (GetNewSecretaryRequest) returns (GetNewSecretaryResponse) {}
}

message GetNewSecretaryRequest {
}

message GetNewSecretaryResponse {
    string host = 1;
    int32 port = 2;
}
